--- a/Seedling Theater Company_Classes Page_Adults.html
+++ b/Seedling Theater Company_Classes Page_Adults.html
@@ -101,7 +101,7 @@
               </div>
               <br>
 
-              <button type="button" class="btn btn-success btn-block">Back</button>
+              <a href="index.html" class="btn btn-success btn-block" role="button">Back</a>
 
               <br>
               <br>
