--- a/index.html
+++ b/index.html
@@ -26,19 +26,26 @@
             <p class="text_white text_standard">980 American Pacific Dr Ste. #103, Henderson, NV 89014</p>
     <br>
             <h2 class="text_white text_cursive">Were young performers are grown</h2>
+
+    <br>
             
         <!--    
             <p class="text_black text_standard">Click Here to Register</p>
         -->
 
-            <button type="button" class="btn btn-success">Click Here to Register</button>
+            <button type="button" class="btn btn-success btn-block">Click Here to Register</button>
 
-            <div class="btn-group btn-group-justified">
+    <br>
+    <br>
+
+            <div class="btn-group btn-group-justified btn-block">
                 <a href="#" class="btn btn-success">Out Mission</a>
                 <a href="#" class="btn btn-success">General Info</a>
                 <a href="#" class="btn btn-success">About Us</a>
                 <a href="#" class="btn btn-success">Store</a>
             </div>
+
+    <br>
           
         <!--        
                 <p class="text_black text_standard">Our Mission</p>
@@ -50,11 +57,13 @@
     <br>
             <h2 class="text_white text_cursive">View Classes We Offer Below</h2>
 
-            <div class="btn-group btn-group-justified">
+    <br>
+
+            <div class="btn-group btn-group-justified btn-block">
                 <a href="#" class="btn btn-success">Photos</a>
-                <a href="#" class="btn btn-success">Kids</a>
-                <a href="#" class="btn btn-success">Teens</a>
-                <a href="#" class="btn btn-success">Adults</a>
+                <a href="Seedling Theater Company_Classes Page_Kids.html" class="btn btn-success">Kids</a>
+                <a href="Seedling Theater Company_Classes Page_Teens.html" class="btn btn-success">Teens</a>
+                <a href="Seedling Theater Company_Classes Page_Adults.html" class="btn btn-success">Adults</a>
 
         <!--   
             <h2 class="text_black text_cursive">Photos</h2>
