--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
             <h2 class="text_white text_cursive">Were young performers are grown</h2>
 
     <br>
-            
-        <!--    
-            <p class="text_black text_standard">Click Here to Register</p>
-        -->
 
             <button type="button" class="btn btn-success btn-block">Click Here to Register</button>
 
@@ -60,7 +56,7 @@
     <br>
 
             <div class="btn-group btn-group-justified btn-block">
-                <a href="#" class="btn btn-success">Photos</a>
+                <a href="Seedling Theater Company_Classes Page_Photos.html" class="btn btn-success">Photos</a>
                 <a href="Seedling Theater Company_Classes Page_Kids.html" class="btn btn-success">Kids</a>
                 <a href="Seedling Theater Company_Classes Page_Teens.html" class="btn btn-success">Teens</a>
                 <a href="Seedling Theater Company_Classes Page_Adults.html" class="btn btn-success">Adults</a>
