--- a/Seedling Theater Company_Classes Page_Photos.html
+++ b/Seedling Theater Company_Classes Page_Photos.html
@@ -31,37 +31,37 @@
 
                 <div class="row">
                     <div class="col-md-3">
-                        <img scr="Class_Photo_1.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_1.jpg" class="img-responsive" alt="Class_Photo_1">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_2.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_2.jpg" class="img-responsive" alt="Class_Photo_2">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_3.jpg" class="img-responsive">"
-                    </div>
-
-
-
-                    <div class="col-md-3">
-                        <img scr="Class_Photo_4.jpg" class="img-responsive">"
-                    </div>
-                    <div class="col-md-3">
-                        <img scr="Class_Photo_5.jpg" class="img-responsive">"
-                    </div>
-                    <div class="col-md-3">
-                        <img scr="Class_Photo_6.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_3.jpg" class="img-responsive" alt="Class_Photo_3">
                     </div>
 
 
 
                     <div class="col-md-3">
-                        <img scr="Class_Photo_7.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_4.jpg" class="img-responsive alt="Class_Photo_4">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_8.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_5.jpg" class="img-responsive alt="Class_Photo_5">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_9.jpg" class="img-responsive">"
+                        <img scr="Class_Photo_6.jpg" class="img-responsive alt="Class_Photo_6">
+                    </div>
+
+
+
+                    <div class="col-md-3">
+                        <img scr="Class_Photo_7.jpg" class="img-responsive alt="Class_Photo_7">
+                    </div>
+                    <div class="col-md-3">
+                        <img scr="Class_Photo_8.jpg" class="img-responsive alt="Class_Photo_8">
+                    </div>
+                    <div class="col-md-3">
+                        <img scr="Class_Photo_9.jpg" class="img-responsive alt="Class_Photo_9">
                     </div>
                 </div>
 
