--- a/Seedling Theater Company_Classes Page_Photos.html
+++ b/Seedling Theater Company_Classes Page_Photos.html
@@ -43,25 +43,25 @@
 
 
                     <div class="col-md-3">
-                        <img scr="Class_Photo_4.jpg" class="img-responsive alt="Class_Photo_4">
+                        <img scr="Class_Photo_4.jpg" class="img-responsive" alt="Class_Photo_4">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_5.jpg" class="img-responsive alt="Class_Photo_5">
+                        <img scr="Class_Photo_5.jpg" class="img-responsive" alt="Class_Photo_5">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_6.jpg" class="img-responsive alt="Class_Photo_6">
+                        <img scr="Class_Photo_6.jpg" class="img-responsive" alt="Class_Photo_6">
                     </div>
 
 
 
                     <div class="col-md-3">
-                        <img scr="Class_Photo_7.jpg" class="img-responsive alt="Class_Photo_7">
+                        <img scr="Class_Photo_7.jpg" class="img-responsive" alt="Class_Photo_7">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_8.jpg" class="img-responsive alt="Class_Photo_8">
+                        <img scr="Class_Photo_8.jpg" class="img-responsive" alt="Class_Photo_8">
                     </div>
                     <div class="col-md-3">
-                        <img scr="Class_Photo_9.jpg" class="img-responsive alt="Class_Photo_9">
+                        <img scr="Class_Photo_9.jpg" class="img-responsive" alt="Class_Photo_9">
                     </div>
                 </div>
 
