--- a/Seedling Theater Company_Classes Page_Adults.html
+++ b/Seedling Theater Company_Classes Page_Adults.html
@@ -23,7 +23,7 @@
             <br>
             <div class="container">
                 <div class="text-black">
-                  <h1>Classes for Adults</h1>
+                  <h1 class="display-2">Classes for Adults</h1>
                 </div>     
               </div>
               <br>
@@ -31,77 +31,77 @@
 
             <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Order Up! (Complete Play)</h1>      
-                  <h3>Mondays: 6-7pm (ages 10-18)</h3>
+                  <h1 class="display-3">Order Up! (Complete Play)</h1>      
+                  <h3 class="display-4">Mondays: 6-7pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Order Up! (Complete Play)</h1>      
-                  <h3>Mondays: 7-8pm (ages 10-18)</h3>
+                  <h1 class="display-3">Order Up! (Complete Play)</h1>      
+                  <h3 class="display-4">Mondays: 7-8pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Comedy on Stage</h1>      
-                  <h3>Tuesdays: 6-7pm (ages 12-18)</h3>
+                  <h1 class="display-3">Comedy on Stage</h1>      
+                  <h3 class="display-4">Tuesdays: 6-7pm (ages 12-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Costume Creation</h1>      
-                  <h3>Thursdays: 4-5pm (ages 10-18)</h3>
+                  <h1 class="display-3">Costume Creation</h1>      
+                  <h3 class="display-4">Thursdays: 4-5pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Broadway Solo</h1>      
-                  <h3>Thursdays: 4-5pm (ages 12-18)</h3>
+                  <h1 class="display-3">Broadway Solo</h1>      
+                  <h3 class="display-4">Thursdays: 4-5pm (ages 12-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Broadway Dance Ensemble</h1>      
-                  <h3>Mondays: 7-8pm (ages 10-18)</h3>
+                  <h1 class="display-3">Broadway Dance Ensemble</h1>      
+                  <h3 class="display-4">Mondays: 7-8pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Vocal Performance</h1>      
-                  <h3>Tuesdays: 5-6pm (ages 10-18)</h3>
+                  <h1 class="display-3">Vocal Performance</h1>      
+                  <h3 class="display-4">Tuesdays: 5-6pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Vocal Performance</h1>      
-                  <h3>Thursdays: 6-7pm (ages 10-18)</h3>
+                  <h1 class="display-3">Vocal Performance</h1>      
+                  <h3 class="display-4">Thursdays: 6-7pm (ages 10-18)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Advanced Acting Slills</h1>      
-                  <h3>Thursdays: 7-8pm (ages 11-18)</h3>
+                  <h1 class="display-3">Advanced Acting Slills</h1>      
+                  <h3 class="display-4">Thursdays: 7-8pm (ages 11-18)</h3>
                 </div>     
               </div>
               <br>
 
-              <a href="index.html" class="btn btn-success btn-block" role="button">Back</a>
+              <a href="index.html" class="btn btn-success btn-lg btn-block" role="button">Back</a>
 
               <br>
               <br>
