--- a/Seedling Theater Company_Classes Page_Kids.html
+++ b/Seedling Theater Company_Classes Page_Kids.html
@@ -23,7 +23,7 @@
             <br>
             <div class="container">
                 <div class="text-black">
-                  <h1>Classes for Kids</h1>
+                  <h1 class="display-2">Classes for Kids</h1>
                 </div>     
               </div>
               <br>
@@ -31,37 +31,37 @@
 
             <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Storyteller Theater</h1>      
-                  <h3>Mondays: 5-6pm (ages 5-7)</h3>
+                  <h1 class="display-3">Storyteller Theater</h1>      
+                  <h3 class="display-4">Mondays: 5-6pm (ages 5-7)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Costume Creation</h1>      
-                  <h3>Tuesdays: 4-5pm (ages 7-10)</h3>
+                  <h1 class="display-3">Costume Creation</h1>      
+                  <h3 class="display-4">Tuesdays: 4-5pm (ages 7-10)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>Beginning Acting</h1>      
-                  <h3>Wednesdays: 5-6pm (ages 7-10)</h3>
+                  <h1 class="display-3">Beginning Acting</h1>      
+                  <h3 class="display-4">Wednesdays: 5-6pm (ages 7-10)</h3>
                 </div>     
               </div>
               <br>
 
               <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1>The Fairytale Network (Complete Play)</h1>      
-                  <h3>Wednesdays: 6-7pm (ages 7-10)</h3>
+                  <h1 class="display-3">The Fairytale Network (Complete Play)</h1>      
+                  <h3 class="display-4">Wednesdays: 6-7pm (ages 7-10)</h3>
                 </div>     
               </div>
               <br>
 
-              <a href="index.html" class="btn btn-success btn-block" role="button">Back</a>
+              <a href="index.html" class="btn btn-success btn-lg btn-block" role="button">Back</a>
 
               <br>
               <br>
