--- a/Seedling Theater Company_Classes Page_Photos.html
+++ b/Seedling Theater Company_Classes Page_Photos.html
@@ -23,7 +23,7 @@
             <br>
             <div class="container">
                 <div class="text-black">
-                  <h1>Class Photos</h1>
+                  <h1 class="display-2">Class Photos</h1>
                 </div>     
               </div>
               <br>
@@ -39,9 +39,11 @@
                     <div class="col-md-3">
                         <img scr="Class_Photo_3.jpg" class="img-responsive" alt="Photo_3">
                     </div>
+                </div>
 
-
-
+                
+                
+                <div class="row">
                     <div class="col-md-3">
                         <img scr="Class_Photo_4.jpg" class="img-responsive" alt="Photo_4">
                     </div>
@@ -51,9 +53,11 @@
                     <div class="col-md-3">
                         <img scr="Class_Photo_6.jpg" class="img-responsive" alt="Photo_6">
                     </div>
+                </div>
 
 
 
+                <div class="row">
                     <div class="col-md-3">
                         <img scr="Class_Photo_7.jpg" class="img-responsive" alt="Photo_7">
                     </div>
@@ -67,7 +71,7 @@
 
               <br>
 
-              <a href="index.html" class="btn btn-success btn-block" role="button">Back</a>
+              <a href="index.html" class="btn btn-success btn-lg btn-block" role="button">Back</a>
 
               <br>
               <br>
