--- a/Seedling Theater Company_Info Page_About Us.html
+++ b/Seedling Theater Company_Info Page_About Us.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="refresh" content="30">
-        <title>Seedling Classes</title>
+        <title>About Us</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Seedling Theater Website CSS.css">
 
@@ -23,7 +23,7 @@
             <br>
             <div class="container">
                 <div class="text-black">
-                  <h1 class="display-2">Classes for Teens</h1>
+                  <h1 class="display-2">About Us</h1>
                 </div>     
               </div>
               <br>
@@ -31,34 +31,15 @@
 
             <div class="container">
                 <div class="jumbotron bg-success text-white">
-                  <h1 class="display-3">Comedy on Stage</h1>      
-                  <h3 class="display-4">Tuesdays: 4-5pm (ages 9-12)</h3>
+                  <h3 class="text_black display-4">Welcome to Seedling Theatre Company! We are a performing arts studio servicing the
+                    Henderson, Southern Las Vegas and Boulder City areas. We offer a variety of courses
+                    for kids ages 3 to 18 years. Our studio has a fully equipped theatre (stage, lighting, sound)
+                    as well as additional rooms for dance and vocal performance classes. Please join 
+                   our email list for regular updates by filling out the contact form below.</h3>
                 </div>     
               </div>
               <br>
 
-              <div class="container">
-                <div class="jumbotron bg-success text-white">
-                  <h1 class="display-3">Broadway Solo</h1>      
-                  <h3 class="display-4">Tuesdays: 5-6pm (ages 10-15)</h3>
-                </div>     
-              </div>
-              <br>
-
-              <div class="container">
-                <div class="jumbotron bg-success text-white">
-                  <h1 class="display-3">40 Plays in 40 Minutes (Complete Play)</h1>      
-                  <h3 class="display-4">Tuesdays: 7-8pm (ages 10-17)</h3>
-                </div>     
-              </div>
-              <br>
-
-              <div class="container">
-                <div class="jumbotron bg-success text-white">
-                  <h1 class="display-3">Broadway Dance Ensemble</h1>      
-                  <h3 class="display-4">Thursdays: 6-7pm (ages 10-14)</h3>
-                </div>     
-              </div>
               <br>
 
               <a href="index.html" class="btn btn-success btn-lg btn-block" role="button">Back</a>
@@ -66,7 +47,7 @@
               <br>
               <br>
               <br>
-              
+
         </body>
    
 </html>
