--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Seedling Theater Website CSS.css">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
 
@@ -39,7 +41,13 @@
     <br>
 
         <div class="gradient-buttons">
-            <button type="button" class="btn btn-success btn-lg btn-block">Click Here to Register</button>
+            <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block" role="button">Click Here to Register</a>
+        </div>
+
+    <br>
+
+        <div class="gradient-buttons">
+            <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block" role="button">Classes Calender</a>
         </div>
 
     <br>
