--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <br>
 
         <div class="gradient-buttons">
+            <a href="#" class="btn btn-success btn-lg btn-block" role="button">Sign In</a>
+        </div>
+
+    <br>
+
+        <div class="gradient-buttons">
             <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block" role="button">Click Here to Register</a>
         </div>
 
@@ -58,7 +64,7 @@
                 <a href="Seedling Theater Company_Info Page_Our Mission.html" class="btn btn-success">Our Mission</a>
                 <a href="Seedling Theater Company_Info Page_General Info.html" class="btn btn-success">General Info</a>
                 <a href="Seedling Theater Company_Info Page_About Us.html" class="btn btn-success">About Us</a>
-                <a href="#" class="btn btn-success">Store</a>
+                <a href="Seedling Theater Company_Store.html" class="btn btn-success">Store</a>
             </div>
 
     <br>
