--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p><a href="Seedling Theater Company_Icon_Email.html"> <img src="Email Sign.svg" alt="Email Icon" width="100" height="100" class="display-1 float-right" style="padding-right: 20px;"></a></p>
 
 
-    <h2 class="text_white text_cursive display-3">Were young performers are grown</h2>
+    <h2 class="text_white text_cursive display-3 animated">Were young performers are grown</h2>
 
     <br>
     <br>
@@ -70,7 +70,7 @@
     <br>
     <br>
     <br>
-            <h2 class="text_white text_cursive display-3">View Classes We Offer Below</h2>
+            <h2 class="text_white text_cursive display-3 animated">View Classes We Offer Below</h2>
 
     <br>
 
