--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lan="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="30">
+        <!--<meta http-equiv="refresh" content="30">-->
         <title>Seedling Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Seedling Theater Website CSS.css">
@@ -34,7 +34,7 @@
     <p><a href="Seedling Theater Company_Icon_Email.html"> <img src="Email Sign.svg" alt="Email Icon" width="100" height="100" class="display-1 float-right" style="padding-right: 20px;"></a></p>
 
 
-    <h2 class="text_white text_cursive display-3 animated">Were young performers are grown</h2>
+    <h2 class="text_white text_cursive display-3 animated">Where young performers are grown</h2>
 
     <br>
     <br>
