--- a/Seedling Theater Company_Classes Page_Kids.html
+++ b/Seedling Theater Company_Classes Page_Kids.html
@@ -21,6 +21,67 @@
 
         <body>
             
+<!--Shop and Sign Up-->
+
+<div class="Header">
+  <div class="container-fluid">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a href="#" class="nav-link waves-effect">
+                      Shop
+                  </a>
+              </li>
+
+              <li class="nav-item pl-2 mb-2 mb-md-0">
+                  <button><a href="#" type="button"
+                  class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
+                      Login
+                  </a></button>
+              </li>
+          </ul>
+      </nav>
+  </div>
+
+<!--Sign in page-->
+
+<div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+
+  <div class="modal-header">
+      <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
+      <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+
+  <div class="modal-body">
+      <div class="md-form md-outline">
+          <i class="fas fa-user prefix"></i>
+          <input type="text" id="modalRegisterForm-name" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
+      </div>
+      <div class="md-form md-outline">
+          <i class="fa fa-envelope prefix"></i>
+          <input type="email" id="modalRegisterForm-email" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
+      </div>
+      <div class="md-form md-outline">
+          <i class="fa fa-lock prefix"></i>
+          <input type="password" id="modalRegisterForm-password" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
+      </div>
+  </div>
+  <div class="modal-footer d-flex justify-content-center">
+      <button class="btn btn-success">Sign Up</button>
+  </div>
+</div>
+</div>
+</div>
+
+<!---->
+
             <br>
             <br>
             <div class="container">
