--- a/index.html
+++ b/index.html
@@ -20,12 +20,92 @@
     </head>
 
     <body>
+
+<!--Shop and Sign Up-->
+
         <div class="Header">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link waves-effect">
+                                Shop
+                            </a>
+                        </li>
+
+                        <li class="nav-item pl-2 mb-2 mb-md-0">
+                            <button><a href="#" type="button"
+                            class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
+                                Login
+                            </a></button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+<!--Sign in page-->
+
+ <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+     <div class="modal-dialog" role="document">
+         <div class="modal-content">
+
+            <div class="modal-header">
+                <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
+                <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <div class="md-form md-outline">
+                    <i class="fas fa-user prefix"></i>
+                    <input type="text" id="modalRegisterForm-name" class="form-control">
+                    <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
+                </div>
+                <div class="md-form md-outline">
+                    <i class="fa fa-envelope prefix"></i>
+                    <input type="email" id="modalRegisterForm-email" class="form-control">
+                    <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
+                </div>
+                <div class="md-form md-outline">
+                    <i class="fa fa-lock prefix"></i>
+                    <input type="password" id="modalRegisterForm-password" class="form-control">
+                    <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-success">Sign Up</button>
+            </div>
+         </div>
+     </div>
+ </div>
+
+<!---->
+
             <h1 class="text_white text_cursive display-1">Seedling Theatre Company</h1>
         </div>
     <br>
             <p class="text_white text_standard display-4">Address</p>
             <p class="text_white text_standard display-4">980 American Pacific Dr Ste. #103, Henderson, NV 89014</p>
+    <br>
+    <br>
+<!--Animation-->
+       <div class="row">
+           <div class="col-sm-12">
+               <div class="headerimage">
+                <svg width="500" height="500">
+                    <rect id="rec" x="300" y="100" width="300" height="100" style="fill:black"> 
+                      <animate attributeName="x" attributeType="XML" begin="0s" dur="3s" fill="freeze" from="300" to="0" /> 
+                      <animate attributeName="y" attributeType="XML" begin="0s" dur="3s" fill="freeze" from="100" to="0" /> 
+                      <animate attributeName="width" attributeType="XML" begin="0s" dur="6s" fill="freeze" from="300" to="800" /> 
+                      <animate attributeName="height" attributeType="XML" begin="0s" dur="6s" fill="freeze" from="100" to="300" /> 
+                      <animate attributeName="fill" attributeType="CSS" from="green" to="green" begin="2s" dur="4s" fill="freeze" />
+                    </rect>
+                  </svg>
+               </div>
+           </div>
+       </div>
+
     <br>
     <br>
             
