--- a/Seedling Theater Company_Classes Page_Photos.html
+++ b/Seedling Theater Company_Classes Page_Photos.html
@@ -28,14 +28,14 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link waves-effect">
+                    <a href="Seedling Theater Company_Store.html" class="nav-link waves-effect">
                         Shop
                     </a>
                 </li>
 
                 <li class="nav-item pl-2 mb-2 mb-md-0">
-                    <button><a href="#" type="button"
-                    class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
+                    <button class="bg-success"><a href="#" type="button"
+                    class="btn btn-md btn-rounded btn-navbar bg-success text-white" data-toggle="modal" data-target="#modalRegisterForm">
                         Login
                     </a></button>
                 </li>
