--- a/Seedling Theater Company_Store.html
+++ b/Seedling Theater Company_Store.html
@@ -21,78 +21,78 @@
 
     <body>
         
-        <!--Shop and Sign Up-->
+<!--Shop and Sign Up-->
 
-        <div class="Header">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link waves-effect">
-                                Shop
-                            </a>
-                        </li>
+<div class="Header">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="Seedling Theater Company_Store.html" class="nav-link waves-effect">
+                        Cart
+                    </a>
+                </li>
 
-                        <li class="nav-item pl-2 mb-2 mb-md-0">
-                            <button><a href="#" type="button"
-                            class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
-                                Login
-                            </a></button>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+                <li class="nav-item pl-2 mb-2 mb-md-0">
+                    <button class="bg-success"><a href="#" type="button"
+                    class="btn btn-md btn-rounded btn-navbar bg-success text-white" data-toggle="modal" data-target="#modalRegisterForm">
+                        Login
+                    </a></button>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
 <!--Sign in page-->
 
- <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-     <div class="modal-dialog" role="document">
-         <div class="modal-content">
+<div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+ <div class="modal-content">
 
-            <div class="modal-header">
-                <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
-                <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+    <div class="modal-header">
+        <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
+        <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
-            <div class="modal-body">
-                <div class="md-form md-outline">
-                    <i class="fas fa-user prefix"></i>
-                    <input type="text" id="modalRegisterForm-name" class="form-control">
-                    <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
-                </div>
-                <div class="md-form md-outline">
-                    <i class="fa fa-envelope prefix"></i>
-                    <input type="email" id="modalRegisterForm-email" class="form-control">
-                    <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
-                </div>
-                <div class="md-form md-outline">
-                    <i class="fa fa-lock prefix"></i>
-                    <input type="password" id="modalRegisterForm-password" class="form-control">
-                    <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
-                </div>
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-success">Sign Up</button>
-            </div>
-         </div>
-     </div>
+    <div class="modal-body">
+        <div class="md-form md-outline">
+            <i class="fas fa-user prefix"></i>
+            <input type="text" id="modalRegisterForm-name" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
+        </div>
+        <div class="md-form md-outline">
+            <i class="fa fa-envelope prefix"></i>
+            <input type="email" id="modalRegisterForm-email" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
+        </div>
+        <div class="md-form md-outline">
+            <i class="fa fa-lock prefix"></i>
+            <input type="password" id="modalRegisterForm-password" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
+        </div>
+    </div>
+    <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-success">Sign Up</button>
+    </div>
  </div>
+</div>
+</div>
 
 <!---->
 
-        <div class="Header">
-            <h1 class="text_white text_cursive display-1">Store</h1>
-        </div>
-    
-    <br>
+            <br>
+            <br>
+            <br>
 
-        <div class="gradient-buttons">
-            <a href="#" class="btn btn-success btn-lg btn-block" role="button">Sign In</a>
-        </div>
+            <div class="container-fluid">
+                <div class="text-black text-white bg-success">
+                    <h1>Shopping Cart</h1>
+                </div>     
+            </div>
 
-    <br>
+            <br>
 
         <div class="container-fluid">
             <div class="row">
@@ -122,10 +122,10 @@
                                     </div>
                                     <div class="col-md-7 col-lg-9 col-xl-s">
                                         <div>
-                                            <h5 class="text-white">Red Hoodie</h5>
-                                            <h3 class="mb-3 text-white text-uppercase small">Shirt - Red</h3>
-                                            <h3 class="mb-3 text-white text-uppercase small">Color: Red</h3>
-                                            <h3 class="mb-3 text-white text-uppercase small">Size: M</h3>
+                                            <h2 class="text-white">Seedling Theater Logo Mug</h2>
+                                            <h3 class="mb-3 text-white text-uppercase small">Text: Seedling Theater Star</h3>
+                                            <h3 class="mb-3 text-white text-uppercase small">Color: White & Green</h3>
+                                            <h3 class="mb-3 text-white text-uppercase small">Size: 8 fl oz</h3>
                                         </div>
                                         <div>
                                             <table>
@@ -178,8 +178,9 @@
                             </div>
                         </div>
                     </div>
-                    <h5 class="text-black mb-0"><i class="fa fa-usd mr-1"></i> Do not delay the purchase, adding
-                    items to your cart does not mean booking them</h5>
+                    <br>
+                    <h3 class="text-warning mb-0"><i class="fa fa-usd mr-1"></i> Do not delay the purchase, adding
+                    items to your cart does not mean booking them</h3>
 
                     <br>
 
@@ -227,19 +228,16 @@
 
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                            Temporary Amount
-                            <span>$26.98</span>
+                            <span>Temporary Amount</span>
+                            <span>$19.99</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                            Shipping
-                            <span>Gratis</span>
+                            <span>Shipping</span>
+                            <span>$5.00</span>
                         </li>
-                        <li class="list-group-item d-flex justify-contant-between align-items-center border-0 px-0 mb-3">
-                            <div>
-                                <strong>The total amount of</strong>
-                                <strong><p class="mb-0">(including VAT)</p></strong>
-                                </div>
-                                <span><strong>$30.98</strong></stong></span>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <span><strong><h4>Total Amount + Tax</h4></strong></span>
+                                <span><strong><h2>$25.00</h2></strong></span>
                             </li>
                         </ul>
 
