--- a/Seedling Theater Company_Icon_Email.html
+++ b/Seedling Theater Company_Icon_Email.html
@@ -20,15 +20,99 @@
     </head>
 
         <body>
-            
+
+<!--Shop and Sign Up-->
+
+<div class="Header">
+  <div class="container-fluid">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a href="Seedling Theater Company_Store.html" class="nav-link waves-effect">
+                      Shop
+                  </a>
+              </li>
+
+              <li class="nav-item pl-2 mb-2 mb-md-0">
+                  <button class="bg-success"><a href="#" type="button"
+                  class="btn btn-md btn-rounded btn-navbar bg-success text-white" data-toggle="modal" data-target="#modalRegisterForm">
+                      Login
+                  </a></button>
+              </li>
+          </ul>
+      </nav>
+  </div>
+
+<!--Sign in page-->
+
+<div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+
+  <div class="modal-header">
+      <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
+      <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+
+  <div class="modal-body">
+      <div class="md-form md-outline">
+          <i class="fas fa-user prefix"></i>
+          <input type="text" id="modalRegisterForm-name" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
+      </div>
+      <div class="md-form md-outline">
+          <i class="fa fa-envelope prefix"></i>
+          <input type="email" id="modalRegisterForm-email" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
+      </div>
+      <div class="md-form md-outline">
+          <i class="fa fa-lock prefix"></i>
+          <input type="password" id="modalRegisterForm-password" class="form-control">
+          <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
+      </div>
+  </div>
+  <div class="modal-footer d-flex justify-content-center">
+      <button class="btn btn-success">Sign Up</button>
+  </div>
+</div>
+</div>
+</div>
+
+<!---->
+
+          <br>
+
+          <div class="jumbotron jumbotron-fluid bg-success text-white">
+            <h1>Have any questions?</h1>
+          </div>
+
             <br>
             <br>
-                <div class="container">
-                <div class="jumbotron bg-success text-white">
-                  <h1 class="display-3">Kris Black</h1>      
-                  <h3 class="display-4">702-286-7242</h3>
-                </div>     
+            <form>
+              <div class="form-group">
+                <label for="exampleFormControlInput1"><h4>Email address</h4></label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1"><h4>Subject</h4></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Product</option>
+                  <option>Show</option>
+                  <option>Complaint</option>
+                  <option>Question</option>
+                  <option>Other</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1"><h4>Message</h4></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+              </div>
+              <div>
+                <button class="btn btn-success btn-lg">Submit</button>
+              </div>
+            </form>
               <br>
 
               <br>
