--- a/Seedling Theater Company_Info Page_About Us.html
+++ b/Seedling Theater Company_Info Page_About Us.html
@@ -21,89 +21,90 @@
 
         <body>
 
-          <!--Shop and Sign Up-->
+<!--Shop and Sign Up-->
 
-        <div class="Header">
-          <div class="container-fluid">
-              <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
-                  <ul class="navbar-nav ml-auto">
-                      <li class="nav-item">
-                          <a href="#" class="nav-link waves-effect">
-                              Shop
-                          </a>
-                      </li>
+<div class="Header">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="Seedling Theater Company_Store.html" class="nav-link waves-effect">
+                        Shop
+                    </a>
+                </li>
 
-                      <li class="nav-item pl-2 mb-2 mb-md-0">
-                          <button><a href="#" type="button"
-                          class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
-                              Login
-                          </a></button>
-                      </li>
-                  </ul>
-              </nav>
-          </div>
+                <li class="nav-item pl-2 mb-2 mb-md-0">
+                    <button class="bg-success"><a href="#" type="button"
+                    class="btn btn-md btn-rounded btn-navbar bg-success text-white" data-toggle="modal" data-target="#modalRegisterForm">
+                        Login
+                    </a></button>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
 <!--Sign in page-->
 
 <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-   <div class="modal-dialog" role="document">
-       <div class="modal-content">
+<div class="modal-dialog" role="document">
+ <div class="modal-content">
 
-          <div class="modal-header">
-              <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
-              <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
+    <div class="modal-header">
+        <h3 class="modal-title mx-auto justify-content-center">Sign Up</h3>
+        <button type="button" class="close ml-0" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
-          <div class="modal-body">
-              <div class="md-form md-outline">
-                  <i class="fas fa-user prefix"></i>
-                  <input type="text" id="modalRegisterForm-name" class="form-control">
-                  <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
-              </div>
-              <div class="md-form md-outline">
-                  <i class="fa fa-envelope prefix"></i>
-                  <input type="email" id="modalRegisterForm-email" class="form-control">
-                  <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
-              </div>
-              <div class="md-form md-outline">
-                  <i class="fa fa-lock prefix"></i>
-                  <input type="password" id="modalRegisterForm-password" class="form-control">
-                  <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
-              </div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center">
-              <button class="btn btn-success">Sign Up</button>
-          </div>
-       </div>
-   </div>
+    <div class="modal-body">
+        <div class="md-form md-outline">
+            <i class="fas fa-user prefix"></i>
+            <input type="text" id="modalRegisterForm-name" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-name">Your Name</label> 
+        </div>
+        <div class="md-form md-outline">
+            <i class="fa fa-envelope prefix"></i>
+            <input type="email" id="modalRegisterForm-email" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-email">Your Email</label>
+        </div>
+        <div class="md-form md-outline">
+            <i class="fa fa-lock prefix"></i>
+            <input type="password" id="modalRegisterForm-password" class="form-control">
+            <label data-error="wrong" data-success="right" for="modalRegisterForm-password">Your Password</label>
+        </div>
+    </div>
+    <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-success">Sign Up</button>
+    </div>
+ </div>
+</div>
 </div>
 
 <!---->
-            
+
             <br>
             <br>
-            <div class="container">
-                <div class="text-black">
-                  <h1 class="display-2">About Us</h1>
-                </div>     
-              </div>
-              <br>
-              <br>
+            <br>
 
-            <div class="container">
-                <div class="jumbotron bg-success text-white">
-                  <h3 class="text_black display-4">Welcome to Seedling Theatre Company! We are a performing arts studio servicing the
-                    Henderson, Southern Las Vegas and Boulder City areas. We offer a variety of courses
-                    for kids ages 3 to 18 years. Our studio has a fully equipped theatre (stage, lighting, sound)
-                    as well as additional rooms for dance and vocal performance classes. Please join 
-                   our email list for regular updates by filling out the contact form below.</h3>
+            <div class="container-fluid">
+                <div class="text-black bg-success">
+                    <h1>About Us</h1>
                 </div>     
-              </div>
-              <br>
+            </div>
+  
 
-              <br>
+<div class="container mt-5">
+    <div class="text-white mt-5">
+      <h3 class="text_black text-white mx-5">Welcome to Seedling Theatre Company! We are a performing arts studio servicing the
+        Henderson, Southern Las Vegas and Boulder City areas. We offer a variety of courses
+        for kids ages 3 to 18 years. Our studio has a fully equipped theatre (stage, lighting, sound)
+        as well as additional rooms for dance and vocal performance classes. Please join 
+       our email list for regular updates by filling out the contact form below.</h3>
+    </div>     
+  </div>
+  <br>
+
+  <br>
 
               <a href="index.html" class="btn btn-success btn-lg btn-block" role="button">Back</a>
 
