--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <nav class="navbar navbar-expand-md navbar-light fixed-top scrolling-navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link waves-effect">
+                            <a href="Seedling Theater Company_Store.html" class="nav-link waves-effect">
                                 Shop
                             </a>
                         </li>
 
                         <li class="nav-item pl-2 mb-2 mb-md-0">
-                            <button><a href="#" type="button"
-                            class="btn btn-md btn-rounded btn-navbar" data-toggle="modal" data-target="#modalRegisterForm">
+                            <button class="bg-success"><a href="#" type="button"
+                            class="btn btn-md btn-rounded btn-navbar bg-success text-white" data-toggle="modal" data-target="#modalRegisterForm">
                                 Login
                             </a></button>
                         </li>
@@ -82,15 +82,26 @@
 
 <!---->
 
-            <h1 class="text_white text_cursive display-1">Seedling Theatre Company</h1>
-        </div>
-    <br>
-            <p class="text_white text_standard display-4">Address</p>
-            <p class="text_white text_standard display-4">980 American Pacific Dr Ste. #103, Henderson, NV 89014</p>
-    <br>
-    <br>
+<br>
+            <br>
+            <br>
+
+            <div class="container-fluid">
+                <div class="text-black text-white bg-success">
+                    <h1>Seedling Theatre Company</h1>
+                </div>     
+            </div>
+
+            <div class="container mt-5">
+                <div class="text-white mt-5">
+                  <h3 class="text_black text-white mx-5">Address <br>
+                    980 American Pacific Dr Ste. #103, Henderson, NV 89014</h3>
+                </div>     
+              </div>
+
+            <br>
 <!--Animation-->
-       <div class="row">
+       <!--<div class="row">
            <div class="col-sm-12">
                <div class="headerimage">
                 <svg width="500" height="500">
@@ -104,36 +115,30 @@
                   </svg>
                </div>
            </div>
-       </div>
+       </div> -->
 
-    <br>
-    <br>
+    <div>
             
-    <p><a href="Seedling Theater Company_Icon_Phone.html"> <img src="Phone Sign.svg" alt="Phone Icon" width="100" height="100" class="display-1 float-left" style="padding-left: 20px;"></a></p>
+        <h1><a href="Seedling Theater Company_Icon_Phone.html"> <img src="Phone Sign.svg" alt="Phone Icon" width="100" height="100" class="display-1 float-left" style="padding-left: 20px;"></a></h1>
 
-    <p><a href="Seedling Theater Company_Icon_Email.html"> <img src="Email Sign.svg" alt="Email Icon" width="100" height="100" class="display-1 float-right" style="padding-right: 20px;"></a></p>
-
-
-    <h2 class="text_white text_cursive display-3 animated">Where young performers are grown</h2>
+        <h1><a href="Seedling Theater Company_Icon_Email.html"> <img src="Email Sign.svg" alt="Email Icon" width="100" height="100" class="display-1 float-right" style="padding-right: 20px;"></a></h1>
 
     <br>
-    <br>
-    <br>
 
-        <div class="gradient-buttons">
-            <a href="#" class="btn btn-success btn-lg btn-block" role="button">Sign In</a>
+        <div class="container-fluid">
+            <div class="text-black text-cursive bg-white">
+                <h1>Where young performers are grown</h1>
+            </div>     
         </div>
 
+    </div>
+
+    <br>
+    <br>
     <br>
 
         <div class="gradient-buttons">
-            <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block" role="button">Click Here to Register</a>
-        </div>
-
-    <br>
-
-        <div class="gradient-buttons">
-            <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block" role="button">Classes Calender</a>
+            <a href="Seedling Theater Company_Class Calender_Classes.html" class="btn btn-success btn-lg btn-block btn-dark" role="button"><h1>Click Here to Register</h1></a>
         </div>
 
     <br>
@@ -141,27 +146,43 @@
     <br>
 
             <div class="gradient-buttons btn-group btn-group-lg btn-block">
-                <a href="Seedling Theater Company_Info Page_Our Mission.html" class="btn btn-success">Our Mission</a>
-                <a href="Seedling Theater Company_Info Page_General Info.html" class="btn btn-success">General Info</a>
-                <a href="Seedling Theater Company_Info Page_About Us.html" class="btn btn-success">About Us</a>
-                <a href="Seedling Theater Company_Store.html" class="btn btn-success">Store</a>
+                <a href="Seedling Theater Company_Info Page_Our Mission.html" class="btn btn-dark"><h3>Our Mission</h3></a>
+                <a href="Seedling Theater Company_Info Page_General Info.html" class="btn btn-dark"><h3>General Info</h3></a>
+                <a href="Seedling Theater Company_Info Page_About Us.html" class="btn btn-dark"><h3>About Us</h3></a>
+                <a href="Seedling Theater Company_Store.html" class="btn btn-dark"><h3>Store</h3></a>
             </div>
 
     <br>
     <br>
     <br>
-            <h2 class="text_white text_cursive display-3 animated">View Classes We Offer Below</h2>
 
+    <div class="container-fluid">
+        <div class="text-black text-cursive bg-white">
+            <h1>View Classes We Offer Below</h1>
+        </div>     
+    </div>
+    
+    <br>
     <br>
 
             <div class="gradient-buttons btn-group btn-group-lg btn-block">
-                <a href="Seedling Theater Company_Classes Page_Photos.html" class="btn btn-success">Photos</a>
-                <a href="Seedling Theater Company_Classes Page_Kids.html" class="btn btn-success">Kids</a>
-                <a href="Seedling Theater Company_Classes Page_Teens.html" class="btn btn-success">Teens</a>
-                <a href="Seedling Theater Company_Classes Page_Adults.html" class="btn btn-success">Adults</a>
-
+                <a href="Seedling Theater Company_Classes Page_Photos.html" class="btn btn-dark"><h3>Photos</h3></a>
+                <a href="Seedling Theater Company_Classes Page_Kids.html" class="btn btn-dark"><h3>Kids</h3></a>
+                <a href="Seedling Theater Company_Classes Page_Teens.html" class="btn btn-dark"><h3>Teens</h3></a>
+                <a href="Seedling Theater Company_Classes Page_Adults.html" class="btn btn-dark"><h3>Adults</h3></a>
+            </div>
+    <br>
+    <br>
+    <br>
     <br>
 
+    <div class="container-fluid">
+                <div class="text-black bg-dark text-white footer-copyright text-center py-3">
+                    <h1><a href="index.html">Seedling Theatre Company</a></h1>
+                        <h3>© 2020 Copyright</h3>
+                </div>     
+            </div>
+
         </body>
-  
+
 </html>
